--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fantasticiousss</title>
     <!-- Favicon for the Tab -->
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/780349296191995924/1354551419830534204/neo_4_-removebg-preview.png?ex=67e5b3d0&is=67e46250&hm=132b6b2774c60659e13ffaf51a95297fc58362dcd0d6d95b701b33594f63d7b1" type="image/png">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/780349296191995924/1354564185710792824/neo_4_-removebg-preview.png?ex=67e5bfb4&is=67e46e34&hm=5a868f9b61dc60d26168bbb0cfd40192448d292fa51d4d2b108777def09dd748&" type="image/png">
     <style>
         body {
             margin: 0;
@@ -45,6 +45,11 @@
     </style>
 </head>
 <body>
+
+    <!-- Logo in the body -->
+    <img src="https://cdn.discordapp.com/attachments/780349296191995924/1354564185710792824/neo_4_-removebg-preview.png?ex=67e5bfb4&is=67e46e34&hm=5a868f9b61dc60d26168bbb0cfd40192448d292fa51d4d2b108777def09dd748&" 
+         alt="Neo Studios Logo" 
+         style="position: absolute; left: 10%; top: 10%; width: 150px;">
 
     <!-- Content inside the body -->
     <div style="position: absolute; left: 10%; top: 50%; transform: translateY(-50%);">
