--- a/index.html
+++ b/index.html
@@ -42,6 +42,29 @@
         .button-container a:hover {
             background-color: #333333;
         }
+
+        /* Mobile responsiveness */
+        @media (max-width: 768px) {
+            body {
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                height: auto;
+            }
+            h1 {
+                font-size: 3rem;
+            }
+            p {
+                font-size: 1rem;
+            }
+            .button-container a {
+                font-size: 1rem;
+                padding: 10px 30px;
+            }
+            img {
+                width: 120px;
+            }
+        }
     </style>
 </head>
 <body>
