--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- Content inside the body -->
     <div style="position: absolute; left: 10%; top: 50%; transform: translateY(-50%);">
         <h1>fantasticiousss</h1>
-        <p>this is it. show them what we're made of.</p>
+        <p>this is it. show them what we're made of. Kristian is gay</p>
 
         <!-- Buttons -->
         <div class="button-container" style="margin-top: 20px;">
