--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fantasticiousss - Showcase</title>
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/780349296191995924/1354564185710792824/neo_4_-removebg-preview.png?ex=67e5bfb4&is=67e46e34&hm=5a868f9b61dc60d26168bbb0cfd40192448d292fa51d4d2b108777def09dd748&" type="image/png">
+    <title>fantasticiousss</title>
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/780349296191995924/1362090107766702130/neo__4_-removebg-preview.png?ex=680120c4&is=67ffcf44&hm=967d0432ccf52f2c653550a598fcbabedcd91360b469d282de56f74e5c14d67b&" type="image/png">
     <style>
         body {
             margin: 0;
@@ -34,7 +34,6 @@
             white-space: nowrap;
         }
 
-        /* Page Styling */
         .page {
             position: absolute;
             top: 0;
@@ -88,8 +87,8 @@
 
     <!-- Main Page Content -->
     <div id="main-page" class="page">
-        <img src="https://cdn.discordapp.com/attachments/780349296191995924/1354564185710792824/neo_4_-removebg-preview.png?ex=67e5bfb4&is=67e46e34&hm=5a868f9b61dc60d26168bbb0cfd40192448d292fa51d4d2b108777def09dd748&" 
-            alt="Neo Studios Logo" class="logo">
+        <img src="https://cdn.discordapp.com/attachments/780349296191995924/1362090107766702130/neo__4_-removebg-preview.png?ex=680120c4&is=67ffcf44&hm=967d0432ccf52f2c653550a598fcbabedcd91360b469d282de56f74e5c14d67b&" 
+            alt="fantasticiousss" class="logo">
 
         <div class="page-content">
             <h1>fantasticiousss</h1>
